<?xml version="1.0" encoding="utf-8"?>
<com.duc.offlinemusicplayer.presentation.widget.SafeAreaView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_window_bg">

    <com.duc.offlinemusicplayer.presentation.widget.CommonToolbarView
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:ctvTitle="@string/app_name_2"
        app:ctvTitleTextStyle="@style/Body.Large.M.20"
        app:ctvShowStartIcon="true"
        app:ctvShowEndIcon="true"
        app:ctvStartIconSrc="@drawable/ic_menu"
        app:ctvEndIconSrc="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutPlayShuffle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/btnPlay"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_song_capsule_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_play"
                app:tint="@color/white" />

            <TextView
                style="@style/Body.Normal.R.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/play"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnShuffle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_song_capsule_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_shuffle"
                app:tint="@color/white" />

            <TextView
                style="@style/Body.Normal.R.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/shuffle"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/neutral_50"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:padding="4dp"
        style="@style/Body.Small.R.14"
        android:text="@string/sort_duration"
        app:drawableStartCompat="@drawable/ic_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPlayShuffle" />

    <!-- Songs RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSongs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSort" />

</com.duc.offlinemusicplayer.presentation.widget.SafeAreaView>


