<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:background="@drawable/bg_bottom_bar"
    android:paddingHorizontal="18dp"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/tabSongs"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tabPlaylists"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTabSongs"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_music_note"
            app:tint="@color/green_primary" />

        <TextView
            android:id="@+id/tvTabSongs"
            style="@style/Label.Small.R.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/songs"
            android:textColor="@color/green_primary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabPlaylists"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tabCenter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/tabSongs"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTabPlaylists"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_playlist"
            app:tint="@color/text_secondary" />

        <TextView
            android:id="@+id/tvTabPlaylists"
            style="@style/Label.Small.R.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/playlists"
            android:textColor="@color/text_secondary" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tabCenter"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_tab_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTabCenter"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/tab_center_bottom_nav" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/tabLibrary"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tabFolders"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/tabCenter"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTabLibrary"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lib"
            app:tint="@color/text_secondary" />

        <TextView
            android:id="@+id/tvTabLibrary"
            style="@style/Label.Small.R.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/library"
            android:textColor="@color/text_secondary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabFolders"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tabLibrary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTabFolders"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_folder"
            app:tint="@color/text_secondary" />

        <TextView
            android:id="@+id/tvTabFolders"
            style="@style/Label.Small.R.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/folders"
            android:textColor="@color/text_secondary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>